sumo/tests/jtrrouter/errors/false_net/errors.jtrrouter
Error: The network file 'input/net.net.xml' is not accessible.
Quitting (on error).
